--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 814935f
+	base = ae50e15
 	trimbase = 
 	parent = release/dashing/rosidl_default_runtime
-	previous = 
+	previous = 814935f
