--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f762e17
+	base = f303e37
 	trimbase = 
 	parent = vcpkg/dashing/rosidl_default_runtime
-	previous = 
+	previous = f762e17
