--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d2b6073
+	base = 04b6b8d
 	trimbase = 
 	parent = release/dashing/rosidl_default_generators
-	previous = 
+	previous = d2b6073
