--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4b32aca
+	base = b1239cb
 	trimbase = 
 	parent = vcpkg/dashing/rosidl_default_generators
-	previous = 
+	previous = 4b32aca
